<resources>
    <string name="app_name">DLRG Bietigheim-Bissingen</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden oder Registrieren</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_email">Diese E-Mailadresse ist ungültig.</string>
    <string name="error_invalid_password">Dieses Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Dieses Passwort ist falsch</string>
    <string name="error_field_required">Dieses Feld muss ausgefüllt sein!</string>
    <string name="freibad">Freibad</string>
    <string name="training">Wettkampf</string>
    <string name="termin">Termine</string>
    <string name="kontakt">Kontakt</string>
    <string name="fcm_message">DLRG Bi-Bi</string>
    <string name="logout">Logout</string>
    <string name="wachgangerinfreibad">Anzahl Wachgänger im Freibad:</string>
    <string name="besucherinfreibad">Besucheranteil:</string>
    <string name="putzplan">Putzplan</string>
    <string name="wachdienst">Wachplan</string>
    <string name="benutzerimfreibad">Bist du gerade im Freibad?</string>
    <string name="nachfordern">Wachgänger nachfordern</string>
    <string name="freibadZeit">das letzte Mal im Freibad vor unbestimmter Zeit</string>
    <string name="pflichttermine">Pflichttermine:</string>
    <string name="termin_button">Pflichttermin hinzufügen</string>
    <string name="wachstunden">Wachstunden</string>
    <string name="stunden_button">WACHSTUNDEN HINZUFÜGEN</string>
    <string name="wachstundenValue">Insgesamt 0 Stunden</string>
    <string name="zeit">Uhr</string>
    <string name="add">Plus</string>
    <string name="clean">Besen</string>
    <string name="fernglas">Fernglas</string>
    <string name="wachstundenMoney">Aktuelle Vergütung: 0€</string>
    <string name="timeNeeded">Ich bin in ... Minuten da!</string>
    <string name="settings">Einstellungen</string>
    <string name="name">Name:</string>
    <string name="example_name">Max Mustermann</string>
    <string name="abzeichen">Abzeichen:</string>
    <string name="sanitätsaubildung">Sanitätsausbildung:</string>
    <string name="rolle">Rolle:</string>
    <string name="neuling">Neuling</string>
    <string name="personsNeeded">Es werden ... Wachgänger benötigt!</string>
    <string name="listWachgänger">Anwesenheitsliste</string>
    <string name="anwesenheitsliste">Anwesenheitsliste</string>
    <string name="wachgängerValue">Insgesamt 0 Wachgänger</string>
    <string-array name="abzeichen_array">
        <item>DRSA Bronze</item>
        <item>DRSA Silber</item>
        <item>DRSA Gold</item>
    </string-array>
    <string-array name="sanitätsausbildung_array">
        <item>Erste Hilfe</item>
        <item>San A</item>
        <item>San B</item>
        <item>San C</item>
        <item>Rettungshelfer/-in</item>
        <item>Rettungssanitäter/-in</item>
        <item>Rettungsassistent/-in</item>
        <item>Notfallsanitäter/-in</item>
        <item>Krankenschwester/-pfleger</item>
        <item>Arzt/Ärztin</item>
    </string-array>
    <string-array name="rolle_array">
        <item>Neuling</item>
        <item>Wachgänger/-in</item>
        <item>Wachleiter/-in</item>
        <item>Admin</item>
    </string-array>
</resources>
