<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dlrgRed"
    android:padding="16dp">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dlrgYellow"
        android:textSize="25dp"
        android:textAlignment="center"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsText"
        android:textColor="@color/dlrgYellow"
        android:textSize="20dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:text="@string/example_name" />

    <TextView
        android:id="@+id/abzeichenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:textColor="@color/dlrgYellow"
        android:textSize="20dp"
        android:text="@string/abzeichen" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="300dp"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_below="@+id/abzeichenText"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingRight="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla" />

    <TextView
        android:id="@+id/sanitätsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:textColor="@color/dlrgYellow"
        android:textSize="20dp"
        android:text="@string/sanitätsaubildung" />

    <Spinner
        android:id="@+id/spinner2"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="300dp"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_below="@+id/sanitätsText"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingRight="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla" />

</RelativeLayout>