<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/dlrgRed"
    android:padding="16dp">

    <TextView
        android:id="@+id/wachstundenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dlrgYellow"
        android:textSize="25dp"
        android:textFontWeight="560"
        android:textAlignment="center"
        android:text="@string/wachstunden" />

    <TextView
        android:id="@+id/wachstundenValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wachstundenText"
        android:textColor="@color/dlrgYellow"
        android:textSize="20dp"
        android:text="@string/wachstundenValue" />

    <TextView
        android:id="@+id/wachstundenMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wachstundenValue"
        android:textColor="@color/dlrgYellow"
        android:textSize="20dp"
        android:text="@string/wachstundenMoney" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wachstundenListe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/wachstundenMoney"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="85dp"/>

    <LinearLayout
        android:id="@+id/termin_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_border_red"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/stunden_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/dlrgYellow"
            android:text="@string/stunden_button"
            android:textColor="#000"
            android:textSize="18dp"
            />
    </LinearLayout>


</RelativeLayout>